# wordcel

./: Makefile  example.py  pyproject.toml  readme.md  requirements.txt
docs/: dag.md  featurize.md  llm_providers.md  llms.md  rag.md
examples/: 01_basic_csv_processing.yaml  02_sentiment_analysis.yaml
tests/: conftest.py  custom_components.yaml  custom_functions1.py  custom_functions2.py  custom_nodes1.py  custom_nodes2.py  dag_example.yaml  featurize_example.py  input_test.yaml  test_contextual_retrieval.py  test_custom_node.py  test_dag.py  test_dag_with_backend.py  test_featurize.py  test_json_nodes.py  test_model_display.py  test_prettier_execution.py  test_python_function_node.py  test_refactor_baseline.py  test_retry_executor.py  test_rich_cli.py  test_subdag.py
wordcel/: __init__.py  __main__.py  builder.html  cli.py  cli_rich.py  completion.py  config.py  dag.py  featurize.py  interactive.py  llm_providers.py  llms.py  logging_config.py
wordcel/dag/: __init__.py  async_utils.py  backends.py  dag.py  default_functions.py  executors.py  nodes.py  schema.py  utils.py
wordcel/rag/: contextual_retrieval.py  table_of_contents.py  utils.py
