[tool.poetry]
name = "wordcel"
version = "0.3.2"
description = "Swiss army-knife for composing LLM outputs"
authors = ["Andrew Han <handrew11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = ">1.0"
openai-agents = ">=0.0.14"
pandas = "*"
scikit-learn = "*"
langchain = ">0.3.0"
networkx = "*"
click = "*"
matplotlib = "*"
rich = ">=13.0.0"

[tool.poetry.scripts]
wordcel = "wordcel.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
