[tool.poetry]
name = "wordcel"
version = "0.4.1"
description = "Swiss army-knife for composing LLM outputs"
authors = ["Andrew Han <handrew11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
openai = ">1.0"
pandas = "*"
scikit-learn = "*"
langchain = ">0.3.0"
networkx = "*"
click = "*"
matplotlib = "*"
graphviz = "*"
rich = ">=13.0.0"
tenacity = "*"
litellm = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.poetry.scripts]
wordcel = "wordcel.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
